--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+	<div>
+		<input type="radio" value="city" name="city">New Delhi
+		<br>
+		<input type="radio" value="city" name="city">Mumbai
+			</div>
+	<div id="capital">
+		<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+			<P>
+			New Delhi is the capital of India and an administrative district of NCT Delhi.	
+			</P>
+		</blockquote>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
